--- a/23-g0ubu1i/23-11-8-周报.md
+++ b/23-g0ubu1i/23-11-8-周报.md
@@ -1,4 +1,4 @@
-# <center> 11/8-周报
+# 11/8-周报
 
 ## 一.本周总结
 
@@ -33,7 +33,7 @@ buuctf刷题进度：[WUSTCTF2020]大数计算
 - a.先将密钥中重复的字符去除，则密钥变为helo和word。
 - b.在两个密钥矩阵中依次写入密钥，其余用不重复的英文字母填充。
 - c.将第一个秘钥矩阵放在右上角，第二个秘钥矩阵放在左下角，两个顺序矩阵分别放在左上角和右下角
-- ![](11-08-周报\123.webp)
+- ![8066290-eaf63b0ed1f0f3ce.webp](https://cdn.nlark.com/yuque/0/2023/webp/39265092/1699506362085-4fa4ec71-ef66-47e6-b7d0-5c50aea8e75f.webp#averageHue=%23f6f6f6&clientId=u166b06fc-f507-4&from=paste&height=149&id=u3ee6c51d&originHeight=268&originWidth=284&originalType=binary&ratio=1.8000000715255737&rotation=0&showTitle=false&size=6326&status=done&style=none&taskId=ub1f4ac36-18e1-4017-af37-040caf28911&title=&width=157.77777150825244)
 - d.若加密goubuli，两两分组，先找到g在第一个顺序矩阵中的位置为第二行第二列，o在第二个顺序矩阵的位置为第三行第五列。则第一个密文为明文第一个字母的行号和第二个字母的列号，即位于第一个密钥矩阵的第二行第五列的G，第二个密文为明文第一个字母的列号和第二个字母的行号，即位于第二个密钥矩阵的第三行第二列的H
 
 ##### (3).解密方法
@@ -42,7 +42,7 @@ buuctf刷题进度：[WUSTCTF2020]大数计算
 
 ##### (4).在线网站
 
-https://www.metools.info/code/four-square244.html
+[https://www.metools.info/code/four-square244.html](https://www.metools.info/code/four-square244.html)
 
 #### 2.云影密码
 
@@ -66,7 +66,7 @@ https://www.metools.info/code/four-square244.html
 
 #### (3)quippuiq网站分析
 
-​	https://quipqiup.com/
+	[https://quipqiup.com/](https://quipqiup.com/)
 
 #### 4.长得像base加密，但解不出来
 
@@ -85,21 +85,19 @@ https://www.metools.info/code/four-square244.html
 扩展的欧几里德算法：
 
 对于不完全为 0 的非负整数 a，b，gcd（a，b）表示 a，b 的最大公约数，必然存在整数对 x，y ，使得
-$$
-gcd(a,b) = ax+by\\
-ax+by = gcd(a , b)\\
-bx1+(a\%b)x2 = gcd(b ,a\%b)
-$$
+
+![](https://www.yuque.com/api/services/graph/generate_redirect/latex?gcd(a%2Cb)%20%3D%20ax%2Bby%5C%5C%0Aax%2Bby%20%3D%20gcd(a%20%2C%20b)%5C%5C%0Abx1%2B(a%5C%25b)x2%20%3D%20gcd(b%20%2Ca%5C%25b)%0A#card=math&code=gcd%28a%2Cb%29%20%3D%20ax%2Bby%5C%5C%0Aax%2Bby%20%3D%20gcd%28a%20%2C%20b%29%5C%5C%0Abx1%2B%28a%5C%25b%29x2%20%3D%20gcd%28b%20%2Ca%5C%25b%29%0A&id=tBcmA)
+
 一直递推，知道a%b=0时停止
 
 根据欧几里得算法，每一个等式的右边都是相等的，可以得到递推公式
-$$
-x = x1 , y = x1– (a/b)y1
-$$
+
+![](https://www.yuque.com/api/services/graph/generate_redirect/latex?x%20%3D%20x1%20%2C%20y%20%3D%20x1%E2%80%93%20(a%2Fb)y1%0A#card=math&code=x%20%3D%20x1%20%2C%20y%20%3D%20x1%E2%80%93%20%28a%2Fb%29y1%0A&id=mU8ck)
+
 在rsa算法中
-$$
-ed - ϕ(n)k = 1
-$$
+
+![](https://www.yuque.com/api/services/graph/generate_redirect/latex?ed%20-%20%CF%95(n)k%20%3D%201%0A#card=math&code=ed%20-%20%CF%95%28n%29k%20%3D%201%0A&id=js3re)
+
 将d看作x，k看作y，求解d即为求x的值
 
 应用:两次加密过程中两个互素的e，相同的n，使用扩展欧几里得算法得到s1，s2后计算m
@@ -130,12 +128,8 @@ print(libnum.n2s(int(m)).decode())
 令t=gcd(e,phi)
 
 当m**t < n 时
-$$
-e' = e // t\\
-d = gmpy2.invert(e',phi)\\
-m^t = pow(c,d,n)\\
-m = gmpy2.iroot(m^t~,t)[0]
-$$
+
+![](https://www.yuque.com/api/services/graph/generate_redirect/latex?e'%20%3D%20e%20%2F%2F%20t%5C%5C%0Ad%20%3D%20gmpy2.invert(e'%2Cphi)%5C%5C%0Am%5Et%20%3D%20pow(c%2Cd%2Cn)%5C%5C%0Am%20%3D%20gmpy2.iroot(m%5Et~%2Ct)%5B0%5D%0A#card=math&code=e%27%20%3D%20e%20%2F%2F%20t%5C%5C%0Ad%20%3D%20gmpy2.invert%28e%27%2Cphi%29%5C%5C%0Am%5Et%20%3D%20pow%28c%2Cd%2Cn%29%5C%5C%0Am%20%3D%20gmpy2.iroot%28m%5Et~%2Ct%29%5B0%5D%0A&id=uLNhz)
 
 ##### (4)rsa解密后的m无法转换为flag
 
@@ -148,8 +142,3 @@ $$
 ```python
 flag = sympy.discrete_log(n,c,m)
 ```
-
-
-
-
-
