--- a/23-Monoceros406/渗透测试常用网站.md
+++ b/23-Monoceros406/渗透测试常用网站.md
@@ -49,3 +49,5 @@ illicit:https://search.0t.rocks/
 IntelTechniques:https://inteltechniques.com/
 OSINTTeam:https://osintteam.blog/
 SocialEngineer:https://www.social-engineer.org/
+LibcDatabaseSearch:https://libc.blukat.me/
+Shell-Storm:http://shell-storm.org/
