--- a/23-Monoceros406/1016-1022总结.md
+++ b/23-Monoceros406/1016-1022总结.md
@@ -49,7 +49,7 @@ Lua爆代码了，但是这个代码不太会逆
 
 *不会* 典型SMC题，对函数异或解密后仍然不完善，还使用了非典型的TEA加密方法
 
-### （加密）[WEEK3]easyre
+### （不会）[WEEK3]easyre
 
 $$
 3\int_{1}^{k}(x^2+x+1)\rm{d}\it{x}=\rm13024
