--- a/23-TUTo-Y/周报3/周报.md
+++ b/23-TUTo-Y/周报3/周报.md
@@ -35,7 +35,7 @@ struct malloc_chunk
 ####   fast bin
 >   32位下存放0x10\~0x40字节的堆块
 >   64位下存放0x20\~0x80字节的堆块
->   fast bin按单链表结构, fd指向下一堆块, 采用FIFO机制
+>   fast bin按单链表结构, fd指向下一堆块, 采用LIFO机制
 >   防止释放时对fast bin合并, 堆块的p标志位为1
 
 #### small bin
