--- a/23-TUTo-Y/周报3/周报.md
+++ b/23-TUTo-Y/周报3/周报.md
@@ -2,6 +2,8 @@
 ##  chunk的具体实现
 ```C
 
+# define INTERNAL_SIZE_T size_t
+
 struct malloc_chunk
 {
     INTERNAL_SIZE_T mchunk_prev_size;  // 如果前面一个物理相邻的堆块是空闲的, 则表示其大小, 否则用于储存前一个堆块的数据
